# sjtu-robotics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backups/navigation_dynamic_legacy/: README.md  dynamic_obstacles_stage1_legacy.yaml  dynamic_obstacles_stage2_legacy.yaml  dynamic_obstacles_stage3_legacy.yaml
docs/: acceptance_checklist.md  development_notes.md  project_plan.md
experiments/: README.md
migration_info/: conda_from_history.yml  conda_full.yml  local_nvidia_smi.txt  python_version.txt  requirements_freeze.txt  torch_info.txt
outputs/training_logs/: latest_transformer_dynamic_avoidance.logpath
prompts/: codex_bootstrap_prompt.md  codex_locomotion_baseline.md  codex_manipulation_baseline.md  codex_navigation_baseline.md  codex_task_template.md
scripts/: check_isaaclab_franka_env.sh  eval.sh  evaluate_navigation_main_table.py  export_codex_conversation.py  play.sh  record_demo.sh  setup_env.sh  train.sh  train_navigation_dynamic_obs_stages.py  visualize_dynamic_obstacles.py
src/summer_camp_rl/: __init__.py  cli.py  registry.py  runners.py
src/summer_camp_rl/common/: config.py  logging.py  paths.py  seed.py
tasks/locomotion/: README.md
tasks/locomotion/configs/: humanoid.yaml  humanoid_flat.yaml  quadruped.yaml  wheel_legged.yaml
tasks/locomotion/runners/: README.md  robot_lab_velocity_runner.py
tasks/manipulation/: README.md
tasks/manipulation/configs/: bag_lift.yaml  (+2 more)
tasks/navigation/: README.md
tests/: test_config_loading.py
wandb/: latest-run
wandb/run-20260620_151927-m3gc60fp/: run-m3gc60fp.wandb
(+51 files in other folders)
