[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summer-camp-embodied-ai"
version = "0.1.0"
description = "Scaffold repository for 2026 summer camp embodied AI tasks: locomotion, navigation, manipulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.23",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
isaaclab = []
navigation = []

[project.scripts]
summer-camp = "summer_camp_rl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
